language/move-lang/tests/move_check/typing/derefrence_reference.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/derefrence_reference.move:6:16
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
5 │     fun t0(r: &R, b: &B) {
  │                - The type '0x8675309::M::R' does not have the ability 'copy'
6 │         R {} = *r;
  │                ^^ Invalid dereference. Dereference requires the 'copy' ability

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/derefrence_reference.move:7:24
  │
3 │     struct B { r: R }
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
4 │ 
5 │     fun t0(r: &R, b: &B) {
  │                       - The type '0x8675309::M::B' does not have the ability 'copy'
6 │         R {} = *r;
7 │         B { r: R{} } = *b;
  │                        ^^ Invalid dereference. Dereference requires the 'copy' ability

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/derefrence_reference.move:8:15
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
3 │     struct B { r: R }
  │                   - The type '0x8675309::M::R' does not have the ability 'copy'
  ·
8 │         R{} = *&b.r;
  │               ^^^^^ Invalid dereference. Dereference requires the 'copy' ability

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/derefrence_reference.move:12:16
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
   ·
11 │     fun t1(r: &mut R, b: &mut B) {
   │                    - The type '0x8675309::M::R' does not have the ability 'copy'
12 │         R {} = *r;
   │                ^^ Invalid dereference. Dereference requires the 'copy' ability

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/derefrence_reference.move:13:24
   │
 3 │     struct B { r: R }
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
   ·
11 │     fun t1(r: &mut R, b: &mut B) {
   │                               - The type '0x8675309::M::B' does not have the ability 'copy'
12 │         R {} = *r;
13 │         B { r: R{} } = *b;
   │                        ^^ Invalid dereference. Dereference requires the 'copy' ability

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/derefrence_reference.move:14:15
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
 3 │     struct B { r: R }
   │                   - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
14 │         R{} = *&b.r;
   │               ^^^^^ Invalid dereference. Dereference requires the 'copy' ability

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/derefrence_reference.move:15:15
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
 3 │     struct B { r: R }
   │                   - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
15 │         R{} = *&mut b.r;
   │               ^^^^^^^^^ Invalid dereference. Dereference requires the 'copy' ability

